--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Wejdan Alraddadi</span>
-                <span class="d-none d-lg-block"><img src="../../startbootstrap-resume-gh-pages/startbootstrap-resume-gh-pages/unnkamed.jpg" width="100" height="92" alt=""/></span>
+                <span class="d-none d-lg-block"><img src="assets/img/unnkamed.jpg" width="100" height="92" alt=""/></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -52,8 +52,8 @@
 
 I am experienced in machine learning, supervised and unsupervised algorithms and use data visualization techniques to present the results. I use SQL, Python,Power Bi and Tableau for my data projects.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/marwanalsaedi/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://marwanalsaedi.github.io/"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/wejdanalraddadi/"><i class="fab fa-linkedin-in"></i></a>
+                        
                         
                     </div>
                 </div>
