--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 I am experienced in machine learning, supervised and unsupervised algorithms and use data visualization techniques to present the results. I use SQL, Python,Power Bi and Tableau for my data projects.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/wejdanalraddadi/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/wejdan-hassan-aa5a73154/"><i class="fab fa-linkedin-in"></i></a>
                         
                         
                     </div>
